# MCP-Knowledge-Base

./: .env.example  .gitignore  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LANGSMITH_INTEGRATION.md  LANGSMITH_TRACING_GUIDE.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  prd.md  pyproject.toml  test_langsmith.py  test_langsmith_tracing.py
src/: main.py
src/rag_server/: main.py  server.py
src/rag_server/api/: routes_admin.py  routes_index.py  routes_query.py
src/rag_server/core/: config.py  logging.py  schemas.py
src/rag_server/ingest/: chunking.py  parsers.py  pipeline.py  readers.py
src/rag_server/llm/: ollama_client.py  openai_client.py  prompt_templates.py
src/rag_server/search/: keyword_index.py  retriever.py  vector_store.py
tests/: test_api.py
